--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Your awesome title
-email: your-email@example.com
+#email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -31,6 +31,8 @@ github_username:  robinhad
 
 # Build settings
 theme: minima
+sass:
+  sass_dir: _sass
 plugins:
   - jekyll-feed
 
