--- a/_config.yml
+++ b/_config.yml
@@ -54,8 +54,8 @@ url: "https://robinhad.github.io" # the base hostname & protocol for your site
 # !! You don't need to change any of the configuration flags below !!
 #
 
-#permalink: /:title/
-permalink: /
+permalink: /:title/
+#permalink: /
 
 
 # The release of Jekyll Now that you're using
