--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Yurii Paniv
 
 # Short bio or description (displayed in the header)
-# description: the profile of an engineer, researcher and software developer
+description: PhD student at UCU developing unsupervised and semi-supervised ML methods to bring state-of-the-art NLP performance to low-resource languages through text, speech, and vision research.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: images/circle_bw_crop.jpg
